# ringmaster

./: .gitignore  README.md  notes.md  run.sh
data/: anaylze.md  output_1000.csv  output_500.csv  plot.py
scripts/: convert.py  cyc_matrix.py  decode.py  encoder.py  framework.md  gftest.py  gftest_gf4.py  helper_matrix.py  mock_data_frame.py  vandermonde.py
scripts/matrix/: __init__.py  cyc_matrix.py  vandermonde.py
src/: CMakeLists.txt
src/app/: CMakeLists.txt  decoder.cc  decoder.hh  encoder.cc  encoder.hh  protocol.cc  protocol.hh  video_receiver.cc  video_sender.cc
src/fec/: CMakeLists.txt  fec_datagram.hh  intra_frame.cc  intra_frame.hh  jerasure.cc  jerasure.hh
src/fec/examples/: Makefile  jerasure.c  note.md  output.html
src/util/: CMakeLists.txt
src/video/: CMakeLists.txt  image.cc  image.hh
